fix(header): lower z-index, change height to px instead of rem

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,8 @@
 .app-bar {
   position: fixed;
-  z-index: 1000;
+  z-index: 2;
+
+  height: 64px;
 
   display: flex;
   flex-direction: row;
